Backport ClaudeCraft to Minecraft Forge 1.16.5
- Target Forge 36.2.39 with ForgeGradle 5.1 and Gradle 7.6.4
- Downgrade to Java 8: replace HttpClient with HttpURLConnection,
  remove var/pattern-matching instanceof/switch expressions/Set.of()
- Replace SLF4J logging with Log4j2 (1.16.5 Forge standard)
- Update Minecraft API: TextComponent instead of Component.literal(),
  direct Component args instead of Supplier for sendSuccess()
- CC: Tweaked dependency: org.squiddev group, version 1.101.2
- Update mods.toml version ranges and pack_format to 6

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>